vlib/v/checker/tests/static_method_multi_return_err.vv
struct SomeStruct {
	name string
}

fn SomeStruct.static_method() (string, int) {
	return 'hello', 100
}

fn main() {
	val := SomeStruct.static_method()
	println(val)
}
